--- a/api-reference/endpoint/linkedin/create_csv_audience.mdx
+++ b/api-reference/endpoint/linkedin/create_csv_audience.mdx
@@ -26,7 +26,7 @@ contentType: multipart/form-data
 </ParamField>
 
 <ParamField body="mode" type="string" default="create">
-	`create` or `replace`
+	Mode: `create`
 </ParamField>
 
 <ParamField body="csv" type="file" required>
