--- a/api-reference/endpoint/meta/create_leadform_audience.mdx
+++ b/api-reference/endpoint/meta/create_leadform_audience.mdx
@@ -19,7 +19,7 @@ description: "This endpoint allows you to create a custom audience based on user
 	Audience description
 </ParamField>
 <ParamField body="type" type="string" required>
-	Type = `open`
+	Type = `open` or `close` or `submit`
 </ParamField>
 <ParamField body="leadFormIds" type="string[]" required>
 	Lead Form Ids
