--- a/api-reference/endpoint/meta/get_video_info.mdx
+++ b/api-reference/endpoint/meta/get_video_info.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Get Video Info"
 api: "POST /meta/get_video_info"
-description: "This endpoint is used to get video info."
+description: "This endpoint is used to get video info like dimensions, thumbnail, source url, etc."
 ---
 
 ## Request Body
