--- a/api-reference/endpoint/meta/search_targeting_interests.mdx
+++ b/api-reference/endpoint/meta/search_targeting_interests.mdx
@@ -19,7 +19,7 @@ description: "This endpoint allows you to search for advertising target interest
 	Supported Values = `HOUSING`, `FINANCIAL_PRODUCTS_SERVICES`, `EMPLOYMENT`
 </ParamField>
 <ParamField body="specialAdCountries" type="string[]" default={[]}>
-	Countries Codes e.g: `US`, `UK`
+	ISO 3166-1 alpha-2 country codes e.g: `US`,`UK`
 </ParamField>
 
 ## Response
