--- a/api-reference/endpoint/meta/check_leadform_tos.mdx
+++ b/api-reference/endpoint/meta/check_leadform_tos.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Check LeardForm TOS"
+title: "Check LeadForm TOS"
 api: "POST /meta/check_leadform_tos"
-description: "This endpoint checks whether the user has accepted the Terms of Service for their connected social media page (e.g., Facebook Page). It is used to verify compliance before allowing actions such as advertising or content management."
+description: "This endpoint checks whether the user has accepted the Terms of Service for their connected facebook page. It is used to verify compliance before allowing actions such as advertising or lead form creation."
 ---
 
 ## Request Body
@@ -12,9 +12,9 @@ description: "This endpoint checks whether the user has accepted the Terms of Se
 	retrieve the user ID from [get profile
 	page](/api-reference/endpoint/auth/get_profile).
 </ParamField>
-<ParamField body="fbPageId" type="string" required>
+{/* <ParamField body="fbPageId" type="string" required>
 	Facebook Page Id
-</ParamField>
+</ParamField> */}
 
 ## Response
 
